implementing exam officer form

--- a/hub/examOfficer.html
+++ b/hub/examOfficer.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="debt" />
         <meta name="author" content="emmanuel" />
-        <title>TUK - For all your Examination Material Handling Management System</title>
+        <title>TUK -Examination Material Handling Management System</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
@@ -118,81 +118,56 @@
 				   <table id="example" class="table table-striped table-hover" style="width:100%">
 					<thead>
 						<tr>
-							<th>Full Name</th>
+						    <th>Full Name</th>
 							<th>User Name</th>
-							<th>Creditor</th>
-							<th>Status</th>
-							<th>Due Date</th>
-							<th>Amount</th>
+							<th>Department</th>
+							<th>Role</th>
+							<th>User</th>
 							<th>Action</th>
 						</tr>
 					</thead>
 					<tbody>
-					   
 						<tr>
-							<td>Peter Mugo</td>
-							<td>26234787</td>
-							<td>Emmanuel Muthui</td>
-							<td><button type="button" class="btn btn-danger btn-sm">Blacklisted </button></td>
-							<td>2021-03-21</td>
-							<td>Ksh. 25500</td>
-							<td><button type="button" class="btn btn-warning  btn-sm"  data-bs-toggle="modal" data-bs-target="#debtorupdateModal">Update Status</button></td>
+							<td>Francis M</td>
+							<td>test</td>
+							<td>BMCS</td>
+							<td>Exam Officer</td>
+							<td><button type="button" class="btn btn-warning  btn-sm" data-bs-toggle="modal" data-bs-target="#">Update User</button></td>
+							<td><button type="button" class="btn btn-danger btn-sm">Delete User</button></td>
 						</tr>
 						<tr>
-							<td>Hellen Njeri</td>
-							<td>26234787</td>
-							<td>Emmanuel Muthui</td>
-							<td><button type="button" class="btn btn-danger btn-sm">Blacklisted</button></td>
-							<td>2021-04-18</td>
-							<td>Ksh. 26500</td>
-							<td><button type="button" class="btn btn-warning btn-sm" data-bs-toggle="modal" data-bs-target="#">Update Status</button></td>
+							<td>Francis M</td>
+							<td>test</td>
+							<td>IT</td>
+							<td>Lecturer</td>
+							<td><button type="button" class="btn btn-warning  btn-sm" data-bs-toggle="modal" data-bs-target="#">Update User</button></td>
+							<td><button type="button" class="btn btn-danger btn-sm">Delete User</button></td>
 						</tr>
 						<tr>
-							<td>Francis Mrongo</td>
-							<td>26234787</td>
-							<td>Njeri Springs</td>
-							<td><button type="button" class="btn btn-danger btn-sm">Blacklisted</button></td>
-							<td>2021-04-18</td>
-							<td>Ksh. 26500</td>
-							<td><button type="button" class="btn btn-warning  btn-sm" data-bs-toggle="modal" data-bs-target="#">Update Status</button></td>
+							<td>Sarah N</td>
+							<td>test</td>
+							<td>ICT</td>
+							<td>Exam Officer</td>
+							<td><button type="button" class="btn btn-warning  btn-sm" data-bs-toggle="modal" data-bs-target="#">Update User</button></td>
+							<td><button type="button" class="btn btn-danger btn-sm">Delete User</button></td>
 						</tr>
 						<tr>
-							<td>Peter Mugo</td>
-							<td>26234787</td>
-							<td>Emmanuel Muthui</td>
-							<td><button type="button" class="btn btn-danger btn-sm">Blacklisted </button></td>
-							<td>2021-03-21</td>
-							<td>Ksh. 25500</td>
-							<td><button type="button" class="btn btn-warning  btn-sm"  data-bs-toggle="modal" data-bs-target="#debtorupdateModal">Update Status</button></td>
-						</tr>
-						<tr>
-							<td>Hellen Njeri</td>
-							<td>26234787</td>
-							<td>Emmanuel Muthui</td>
-							<td><button type="button" class="btn btn-danger btn-sm">Blacklisted</button></td>
-							<td>2021-04-18</td>
-							<td>Ksh. 26500</td>
-							<td><button type="button" class="btn btn-warning btn-sm" data-bs-toggle="modal" data-bs-target="#">Update Status</button></td>
-						</tr>
-						<tr>
-							<td>Francis Mrongo</td>
-							<td>26234787</td>
-							<td>Njeri Springs</td>
-							<td><button type="button" class="btn btn-danger btn-sm">Blacklisted</button></td>
-							<td>2021-04-18</td>
-							<td>Ksh. 26500</td>
-							<td><button type="button" class="btn btn-warning  btn-sm" data-bs-toggle="modal" data-bs-target="#">Update Status</button></td>
+							<td>Francis M</td>
+							<td>admin</td>
+							<td>IT</td>
+							<td>Lecturer</td>
+							<td><button type="button" class="btn btn-warning  btn-sm" data-bs-toggle="modal" data-bs-target="#">Update User</button></td>
+							<td><button type="button" class="btn btn-danger btn-sm">Delete User</button></td>
 						</tr>
 					</tbody>
 					<tfoot>
 						<tr>
 							<th>Full Name</th>
 							<th>User Name</th>
-							<th>Creditor</th>
-							<th>Status</th>
-							<th>Due Date</th>
-							<th>Amount</th>
-							<th>Action</th>
+							<th>Department</th>
+							<th>Role</th>
+							<th>Update</th>
+							<th>Delete</th>
 						</tr>
 					</tfoot>
 				</table>
